theme: fix invisible avatar for classic
https://bugzilla.gnome.org/show_bug.cgi?id=745693

--- a/data/gnome-classic.css
+++ b/data/gnome-classic.css
@@ -1453,10 +1453,12 @@ StScrollBar {
 /* Auth Dialogs & Screen Shield */
 .framed-user-icon {
   background-size: contain;
-  border: 2px solid #a1a1a1;
+  border: 2px solid #eeeeec;
+  color: #eeeeec;
   border-radius: 3px; }
   .framed-user-icon:hover {
-    border-color: #ededed; }
+    border-color: white;
+    color: white; }
 
 .login-dialog-banner-view {
   padding-top: 24px;
